<resources>
    <string name="app_name">ProjectManager</string>
    <string name="title_activity_project">My Projects</string>
    <string name="title_activity_errors">Error log</string>
    <string name="action_log">Error log</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="create_project">Create Project</string>
    <string name="create_new_project">Create New Project</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="my_role">My role</string>
    <string name="role">Role</string>
    <string name="new_task">New Task</string>
    <string name="task_description">Task Description</string>
    <string name="change_project">Change Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="add_user">Add User</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="user_id">User ID</string>
    <string name="add">Add</string>
    <string name="sure_project_delete">Are you sure you want to delete project</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_name">Task Name</string>
    <string name="subordinate">Subordinate</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="pick">Pick</string>
    <string name="wrong_email_password">Wrong email or password!</string>
    <string name="error_log">Error log</string>
    <string name="clear_log">Clear log</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="leader">Leader</string>
    <string name="my_subordinates">My subordinates</string>
    <string name="Subordinate">Subordinate</string>
    <string name="my_colleagues">My colleagues</string>
    <string name="change">Change</string>
    <string name="my_boss">My boss</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="designer">Designer</string>
    <string name="task_name_hint">Task  1</string>
    <string name="task_description_hint">Something about the task</string>
</resources>
