<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"/>
    <EditText
        android:id="@+id/AUD_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="123"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"/>
    <EditText
        android:id="@+id/AUD_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/designer"
        />
    <Button
        android:id="@+id/AUD_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    <TextView
        android:id="@+id/add_user_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>