<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/btnsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addUserBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/add_user"
                android:background="@drawable/round_corners" />

            <Button
                android:id="@+id/addTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/new_task"
                android:background="@drawable/round_corners" />

            <Button
                android:id="@+id/changeProjectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/change_project"
                android:background="@drawable/round_corners" />

            <Button
                android:id="@+id/deleteProjectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/delete_project"
                android:background="@drawable/round_corners" />
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:id="@+id/showGanttBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/gantt_chart"
        android:background="@drawable/round_corners"
        android:layout_below="@id/btnsLayout"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/myRoleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showGanttBtn"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subordinatestasks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/myRoleView"/>
</RelativeLayout>